@@ -887,6 +887,13 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${compiler.plugin.version}</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.ow2.asm</groupId>
+              <artifactId>asm</artifactId>
+              <version>6.0_BETA</version>
+            </dependency>
+          </dependencies>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -1072,7 +1079,7 @@
                 <requireEncoding>
                   <encoding>UTF-8</encoding>
                   <includes>src/main/java/**/*.java</includes>
-                  <excludes>**/package-info.java</excludes>
+                  <excludes>**/package-info.java,**/module-info.java,</excludes>
                 </requireEncoding>
               </rules>
             </configuration>
@@ -1151,7 +1158,7 @@
           <source>${jdk.src.version}</source>
           <target>${jdk.target.version}</target>
           <excludes>
-            <exclude>{jdk.src.exclude}</exclude>
+            <exclude>${jdk.src.exclude}</exclude>
           </excludes>
           <debug>false</debug>
           <optimize>true</optimize>
@@ -1242,7 +1249,7 @@
         <jdk>9</jdk>
       </activation>
       <properties>
-        <additionalRuntimeArgLine>--add-modules java.xml.bind,ALL-MODULE-PATH --add-exports java.base/sun.nio.ch=ALL-UNNAMED --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-exports java.xml/com.sun.org.apache.xml.internal.resolver=ALL-UNNAMED --add-exports java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED</additionalRuntimeArgLine>
+        <additionalRuntimeArgLine>-server -Xmx2048m -Xms2048m -XX:+UseParallelGC -XX:+AggressiveOpts --add-modules java.xml.bind,ALL-MODULE-PATH --add-exports java.base/sun.nio.ch=ALL-UNNAMED --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-exports java.xml/com.sun.org.apache.xml.internal.resolver=ALL-UNNAMED --add-exports java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.desktop/java.awt.font=ALL-UNNAMED</additionalRuntimeArgLine>
         <jdk.src.version>1.8</jdk.src.version>
         <jdk.target.version>1.8</jdk.target.version>
         <jdk.src.exclude></jdk.src.exclude>
